manifests/system/base/ironic/internal/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ironic
spec:
  # It's unlikely that Ironic will work with several replicas running as it holds some state.
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: ironic-shared
          emptyDir: {}
        - name: ironic-credentials
          secret:
            secretName: ironic-credentials
        - name: ironic-conf
          configMap:
            name: ironic-conf
        - name: ironic-inspector-conf
          configMap:
            name: ironic-inspector-conf
      containers:
        - name: ironic
          image: ghcr.io/metalkast/ironic
          command: [ironic]
          args:
            - --config-file=/etc/defaults/ironic.conf
            - --config-dir=/etc/ironic/
          volumeMounts:
            - mountPath: /shared
              name: ironic-shared
            - mountPath: /etc/ironic
              name: ironic-conf
            - mountPath: /etc/ironic-credentials
              name: ironic-credentials
        - name: ironic-inspector
          image: ghcr.io/metalkast/ironic:31.0.0
          command: [sh, -c]
          args:
            - |
              ironic-inspector-dbsync --config-file=/etc/defaults/ironic-inspector.conf --config-dir=/etc/ironic-inspector/ upgrade
              ironic-inspector --config-file=/etc/defaults/ironic-inspector.conf --config-dir=/etc/ironic-inspector/
          volumeMounts:
            - mountPath: /etc/ironic-inspector
              name: ironic-inspector-conf
            - mountPath: /etc/ironic-credentials
              name: ironic-credentials
        - name: httpd
          image: httpd:2.4.46
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs
              name: ironic-shared
              subPath: html
              readOnly: true
