manifests/system/base/ironic/internal/base/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ironic
  annotations:
    cert-manager.io/cluster-issuer: ingress-issuer
spec:
  ingressClassName: nginx
  tls:
  - secretName: ironic-tls
    hosts:
    - ironic.__DOMAIN__
    - ironic-deploy.__DOMAIN__
    - ironic-inspector.__DOMAIN__
  rules:
  - host: ironic.__DOMAIN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ironic
            port:
              number: 6385
  - host: ironic-deploy.__DOMAIN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ironic
            port:
              number: 80
  - host: ironic-inspector.__DOMAIN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ironic
            port:
              number: 5050
